src/test/deca/context/valid/created/testPrint/printlnMultipleDiffType.deca
// Description :
//    Test de l'affichage de plusieurs chaînes de caractères et de variables avec println
//
// Résultats :
//    ok

{
   int x = 1;
   println("Hello", "world", "!", x, x * x);
}
