src/test/deca/context/invalid/created/testPass3/proctectedAcces.deca
// Description :
//    Test invalide : Utilisation de l'instruction print avec un booléen
//
// Résultats :
//    Erreur contextuelle
//    Ligne 13: ProtectedAccessException: Cannot access the attribute because it is declared as protected.

class A{
    protected int x;
}
{
    A a = new A();
    println(a.x);
}